[package]
name = "rainforest_game"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
grid_2d = { version = "0.15", features = ["serialize"] }
direction = { version = "0.18", features = ["serialize"] }
serde = { version = "1.0", features = ["serde_derive"] }
rand = "0.8"
rand_isaac = { version = "0.3", features = ["serde1"] }
line_2d = { version = "0.5", features = ["serialize"] }
rational = { path = "../util/rational" }
rand_range = { path = "../util/rand-range" }
rgb_int = { version = "0.1", features = ["serialize", "rand"] }
entity_table = { version = "0.2", features = ["serialize"] }
entity_table_realtime = { version = "0.1", features = ["serialize"] }
perlin2 = "0.1"
spatial_table = { version = "0.3", features = ["serialize"] }
shadowcast = { version = "0.8", features = ["serialize"] }
