[package]
name = "rainforest_game"
version = "0.1.0"
edition = "2021"

[dependencies]
gridbugs = { version = "0.2", features = [ "backend_serialize", "rgb_int_rand" ] }
log = "0.4"
serde = { version = "1.0", features = ["serde_derive"] }
rand = "0.8"
rand_isaac = { version = "0.3", features = ["serde1"] }
rational = { path = "../util/rational" }
rand_range = { path = "../util/rand-range" }
perlin2 = "0.1"
