[package]
name = "rainforest_web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
chargrid_web = "0.3"
console_error_panic_hook = "0.1"
general_storage_static = { version = "0.2", features = ["web"] }
log = "0.4"
rainforest_app = { path = "../app", features = ["web", "print_log"]}
wasm-bindgen = "0.2"
wasm-logger = "0.2"
