[package]
name = "rainforest_web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
gridbugs = { version = "0.2", features = [
    "chargrid_web_gamepad",
    "storage_backend_web",
    "audio_backend_web",
] }
console_error_panic_hook = "0.1"
log = "0.4"
rainforest_app = { path = "../app", features = ["web", "print_log"]}
wasm-bindgen = "0.2"
wasm-logger = "0.2"
